--- a/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
@@ -1,12 +1,11 @@
 ﻿@using AdminComposite.Models
 @using Euclid.Composites.Mvc.Extensions
-@model CreateBadgeInputModel
-
+@model UpdateBadgeInputModel
 
 <section>
 	@using (Html.BeginFormForInputModel(Model))
 	{
-		@Html.HiddenFor(m=>m.ForumIdentifier)
+		@Html.HiddenFor(m=>m.BadgeIdentifier)
 		<fieldset>
 			<legend>New Badge</legend>
 
