introduced partials for common elements; added initial draft of categories, tags, and info screens, mostly missing user-related screens now

--- a/assets/templates/Forum Skeleton/Info.cshtml
+++ b/assets/templates/Forum Skeleton/Info.cshtml
@@ -61,11 +61,9 @@
         
       <div class="content">
         
-        <ul class="tabs">
-            <li><a href="Home.cshtml">Popular Posts</a></li>
-            <li><a href="ControversialPosts.cshtml">Controversial Posts</a></li>
-            <li class="active"><a href="AllPosts.cshtml">All Posts</a></li>
-        </ul>
+        <h1>Info</h1>
+        
+        <hr/>
 
         <!-- all posts -->
 
@@ -130,68 +128,6 @@
         </div>
             
         <hr>          
-        
-        <div class="row">
-            <div class="span4">
-                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
-                    <img src="images/thumb-up.png"/><br/>
-                    <img src="images/thumb-down.png"/><br/>
-                    <img src="images/icon_notification_attention.png"/><br/>
-                </div>    
-                <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
-                <div class="row">
-                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
-                </div>                
-            </div>
-            <div class="span4">
-                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
-                    <img src="images/thumb-up.png"/><br/>
-                    <img src="images/thumb-down.png"/><br/>
-                    <img src="images/icon_notification_attention.png"/><br/>
-                </div>    
-                <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
-                <div class="row">
-                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
-                </div>                
-            </div>
-            <div class="span4">
-                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
-                    <img src="images/thumb-up.png"/><br/>
-                    <img src="images/thumb-down.png"/><br/>
-                    <img src="images/icon_notification_attention.png"/><br/>
-                </div>    
-                <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
-                <div class="row">
-                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
-                </div>                
-            </div>
-            <div class="span4">
-                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
-                    <img src="images/thumb-up.png"/><br/>
-                    <img src="images/thumb-down.png"/><br/>
-                    <img src="images/icon_notification_attention.png"/><br/>
-                </div>    
-                <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
-                <div class="row">
-                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
-                </div>                
-            </div>          
-            
-        </div>
-            
-        <hr>            
             
         <div class="row">
             <div class="span4">
