--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -46,54 +46,20 @@
 
   <body>
 
-    <div class="topbar">
-      <div class="topbar-inner">
-        <div class="container-fluid">
-          <a class="brand" href="#">{Forum Name}</a>
-          <ul class="nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="#about">Categories</a></li>
-            <li><a href="#about">Tags</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <form action="" class="pull-right">
-            <input class="input-small" type="text" placeholder="Username">
-            <input class="input-small" type="password" placeholder="Password">
-            <button class="btn primary" type="submit">Sign in</button> <button href="#" class="btn small">Register account</button>
-          </form>
-        </div>
-      </div>
-    </div>
+    @RenderPage("~/partials/TopBar.cshtml")
 
     <div class="container-fluid">
+        
       <div class="sidebar">
         <div class="well">
-            <div class="row">
-                <div class="span1 badge-avatar">
-                     <img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/> 
-                </div>
-                <div class="span2 badge-labels">
-                    <h3 class="badge-username">{Username}</h3>
-                    <p class="badge-points">25 points</p>
-                </div>
-            </div>                      
+            @RenderPage("~/partials/Badge.cshtml")       
         </div>
         <div class="well">
-          <h3>Categories</h3>
-          <ul>
-            <li><a href="#"><strong>All Categories</strong></a> (70)</li>
-            <li><a href="#">Category</a> (10)</li>
-            <li><a href="#">Another Category</a> (10)</li>
-            <li><a href="#">Creative Category</a> (10)</li>
-            <li><a href="#">Unmoderated Forum</a> (10)</li>
-            <li><a href="#">Placeholder Category</a> (10)</li>
-            <li><a href="#">Example Category</a> (10)</li>
-          </ul>
-          <h3>Tags</h3>
-          <div id="tagCloud" style="height: 175px; width: 150px; position: relative;"></div>
+            @RenderPage("~/partials/Categories.cshtml")       
+            @RenderPage("~/partials/Tags.cshtml")       
         </div>
       </div>
+        
       <div class="content">
         
         <div class="alert-message block-message warning fade in" data-alert="alert">
