building out category screens

--- a/assets/templates/Forum Skeleton/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/Categories.cshtml
@@ -10,7 +10,6 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Le styles -->
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/jqcloud.css">
     <link rel="stylesheet" href="styles/custom.css">
@@ -71,7 +70,7 @@
 
         <div class="row">
             <div class="span5">
-                <h2>{Category Name}</h2>
+                <h2><a href="Category.cshtml">{Category Name}</a></h2>
                 <p>A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -86,7 +85,7 @@
                 <a href="#">View</a> 33 more posts.
             </div>
            <div class="span5">
-                <h2>{Category Name}</h2>
+                <h2><a href="Category.cshtml">{Category Name}</a></h2>
                 <p>A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -101,7 +100,7 @@
                 <a href="#">View</a> 33 more posts.
             </div>
            <div class="span5">
-                <h2>{Category Name}</h2>
+                <h2><a href="Category.cshtml">{Category Name}</a></h2>
                 <p>A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -122,7 +121,7 @@
             
         <div class="row">
             <div class="span4" style="font-size: smaller;">
-                <h3>{Category Name}</h3>           
+                <h3><a href="Category.cshtml">{Category Name}</a></h3>            
                 <p>A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -133,7 +132,7 @@
                 <a href="#">View</a> 33 more posts.                
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3>{Category Name}</h3>           
+                <h3><a href="Category.cshtml">{Category Name}</a></h3>            
                 <p style="font-size: smaller;">A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -144,7 +143,7 @@
                 <a href="#">View</a> 33 more posts.                
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3>{Category Name}</h3>           
+                <h3><a href="Category.cshtml">{Category Name}</a></h3>            
                 <p style="font-size: smaller;">A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
@@ -155,7 +154,7 @@
                 <a href="#">View</a> 33 more posts.                
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3>{Category Name}</h3>           
+                <h3><a href="Category.cshtml">{Category Name}</a></h3>    
                 <p style="font-size: smaller;">A brief description of the category.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
