--- a/assets/templates/Forum Skeleton/partials/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/partials/Categories.cshtml
@@ -1,10 +1,10 @@
 ﻿  <h3>Categories</h3>
   <ul>
-    <li><a href="#"><strong>All Categories</strong></a> (70)</li>
-    <li><a href="#">Category</a> (10)</li>
-    <li><a href="#">Another Category</a> (10)</li>
-    <li><a href="#">Creative Category</a> (10)</li>
-    <li><a href="#">Unmoderated Forum</a> (10)</li>
-    <li><a href="#">Placeholder Category</a> (10)</li>
-    <li><a href="#">Example Category</a> (10)</li>
+    <li><a href="Categories.cshtml"><strong>All Categories</strong></a> (70)</li>
+    <li><a href="Category.cshtml">Category</a> (10)</li>
+    <li><a href="Category.cshtml">Another Category</a> (10)</li>
+    <li><a href="Category.cshtml">Creative Category</a> (10)</li>
+    <li><a href="Category.cshtml">Unmoderated Forum</a> (10)</li>
+    <li><a href="Category.cshtml">Placeholder Category</a> (10)</li>
+    <li><a href="Category.cshtml">Example Category</a> (10)</li>
   </ul>
