skeletons for tags

--- a/assets/templates/Forum Skeleton/Tag.cshtml
+++ b/assets/templates/Forum Skeleton/Tag.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{Forum Name} - All Posts</title>
+    <title>{Forum Name} - {Tag Name}</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -60,16 +60,20 @@
         
       <div class="content">
         
-        <h1>Tags</h1>
+        <h1>{Tag Name}</h1>
         
-        <hr/>
+        <ul class="breadcrumb">
+            <li><a href="Categories.cshtml">Tags</a> <span class="divider">/</span></li>
+            <li class="active">{Tag Name}</li>
+        </ul>
+        
+        <hr />
         
         <!-- all posts -->
 
         <div class="row">
             <div class="span5">
                 <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <p>A brief description of the tag.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
@@ -84,7 +88,6 @@
             </div>
            <div class="span5">
                 <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <p>A brief description of the tag.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
@@ -99,7 +102,6 @@
             </div>
            <div class="span5">
                 <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <p>A brief description of the tag.</p>
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
@@ -119,8 +121,7 @@
             
         <div class="row">
             <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
-                <p>A brief description of the tag.</p>
+                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
@@ -130,30 +131,27 @@
                 <a href="#">View</a> 33 more posts.                
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
-                <p style="font-size: smaller;">A brief description of the tag.</p>
+                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
                     <dt>{Post title}</dt>                    
                     <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
                 </dl>
-                <a href="#">View</a> 33 more posts.                
+                <a href="#">View</a> 33 more posts.              
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
-                <p style="font-size: smaller;">A brief description of the tag.</p>
+                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
                     <dt>{Post title}</dt>                    
                     <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
                 </dl>
-                <a href="#">View</a> 33 more posts.                
+                <a href="#">View</a> 33 more posts.               
             </div>
             <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
-                <p style="font-size: smaller;">A brief description of the tag.</p>
+                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
                 <dl>
                     <dt>{Post title}</dt>                    
                     <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
