added working links to tag cloud

--- a/assets/templates/Forum Skeleton/ControversialPosts.cshtml
+++ b/assets/templates/Forum Skeleton/ControversialPosts.cshtml
@@ -23,18 +23,18 @@
         
     <script>
         var tag_cloud = [
-            {text: "Tag", weight: 1, url: "#tag"},
-            {text: "Another Tag", weight: 2, url: "#another-tag"},
-            {text: "Green", weight: 3, url: "#green"},
-            {text: "Favorites", weight: 4, url: "#favorites"},
-            {text: "Cars", weight: 6, url: "#cars"},
-            {text: "Arbitrary", weight: 4, url: "#favorites"},
-            {text: "Bars", weight: 6, url: "#cars"},
-            {text: "Hoaxes", weight: 5, url: "#hoaxes"},
-            {text: "Bats", weight: 6, url: "#cars"},
-            {text: "Marathon", weight: 2, url: "#another-tag"},
-            {text: "Jokes", weight: 7, url: "#jokes"},
-        ];    
+            {text: "Tag", weight: 1, url: "Tag.cshtml#tag"},
+            {text: "Another Tag", weight: 2, url: "Tag.cshtml#another-tag"},
+            {text: "Green", weight: 3, url: "Tag.cshtml#green"},
+            {text: "Favorites", weight: 4, url: "Tag.cshtml#favorites"},
+            {text: "Cars", weight: 6, url: "Tag.cshtml#cars"},
+            {text: "Arbitrary", weight: 4, url: "Tag.cshtml#favorites"},
+            {text: "Bars", weight: 6, url: "Tag.cshtml#cars"},
+            {text: "Hoaxes", weight: 5, url: "Tag.cshtml#hoaxes"},
+            {text: "Bats", weight: 6, url: "Tag.cshtml#cars"},
+            {text: "Marathon", weight: 2, url: "Tag.cshtml#another-tag"},
+            {text: "Jokes", weight: 7, url: "Tag.cshtml#jokes"},
+        ];      
 
         $(document).ready(function() {
             $(".alert-message").alert();
